# Heterogeneity-Aware-Soft-Weighted-GGM-with-STRING-Priors

./: .gitignore  README.md  environment.yml  method_result_and_analysis.md  plan.md  project_context.md  pyproject.toml  requirements.txt  stringdb.md
configs/: default.yaml  quick.yaml  smoke.yaml  tuning_best.yaml  tuning_hvg200.yaml  tuning_hvg300.yaml  tuning_hvg500.yaml  tuning_recommended.yaml
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_clustering.ipynb  04_global_ggm.ipynb  05_soft_weighted_ggm.ipynb  06_kg_integration.ipynb  07_evaluation.ipynb  final_pipeline.ipynb
scripts/: tuning_sweep.py
src/pgm/: __init__.py
src/pgm/clustering/: __init__.py  heterogeneity.py
src/pgm/config/: __init__.py  loader.py  schemas.py
src/pgm/data/: __init__.py  loader.py  summary.py  validate.py
src/pgm/evaluation/: __init__.py  overlap.py  similarity.py  sparsity.py  stability.py
src/pgm/kg/: __init__.py  prior_matrix.py  string_api.py
src/pgm/models/: __init__.py  glm_utils.py  global_ggm.py  kg_ggm.py  soft_weighted_ggm.py
src/pgm/pipelines/: __init__.py  cluster.py  eda.py  evaluation.py  full_pipeline.py  global_ggm.py  ingest.py  kg_pipeline.py  preprocess.py  soft_ggm.py
src/pgm/preprocessing/: __init__.py  pipeline.py
src/pgm/utils/: __init__.py  adata_audit.py  checkpoint.py  env.py  logging_setup.py  notebook.py  paths.py  seeds.py
src/pgm/visualization/: __init__.py  theme.py
tests/: test_clustering.py  test_eda.py  test_ggm_smoke.py  test_glm_fit.py  test_infra.py  test_ingestion.py  test_preprocess.py  test_tuning_finalize.py
